homelab/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: websocket
      port: 3012
      targetPort: websocket
  selector:
    app: vaultwarden
