homelab/vaultwarden/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: envoy-gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.hu.ls"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-k8s-hu-ls-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.hu.ls"
      allowedRoutes:
        namespaces:
          from: All
